src/test/compile-fail/infinite-vec-type-recursion.rs
// -*- rust -*-
// xfail-stage0
// error-pattern: illegal recursive type

type x = vec[x];

fn main() {
  let x b = [];
}
